# yuanfang-brain

./: .gitignore  README.md
clients/android/: gradlew  gradlew.bat
clients/android/app/: build.gradle.kts
clients/ios/HermesVoice/: project.yml
clients/ios/HermesVoice/HermesVoice/: AudioPlayerManager.swift  ContentView.swift  Info.plist  WakeWordClient.swift  WebSocketClient.swift
clients/ios/HermesVoice/HermesVoice.xcodeproj/: project.pbxproj
deploy/: install-mac.sh
deploy/systemd/: com.yuanfang.brain.plist
docs/: api.md  architecture.md  esp32-amoled-2.06-dev-manual.md  protocol.md
ha/: assistant.py
integrations/laopodada-bridge/: README.md
integrations/laopodada-bridge/scripts/: sync.sh
integrations/laopodada-bridge/www/: index.html
server/: pyproject.toml
server/scripts/: record_sample.sh  start.sh  stop.sh  test_e2e.sh
server/tests/: conftest.py  test_smoke.py  test_wakeword.py
server/yuanfang_brain/: __init__.py  config.py  llm.py  main.py  vad.py
server/yuanfang_brain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/yuanfang_brain/api/: http.py  schema.py  ws.py
server/yuanfang_brain/asr/: factory.py  local.py  minimax.py
server/yuanfang_brain/conversation/: manager.py  memory.py
server/yuanfang_brain/ha/: client.py  tools.py
server/yuanfang_brain/llm/: claude.py  factory.py
server/yuanfang_brain/tts/: factory.py  minimax.py
server/yuanfang_brain/wakeword/: __init__.py
voice/: asr_transcribe.py  intent.py  tts_speak.py  tts_stream.py  voice_e2e.py  ws_server.py
(+6 files in other folders)
