[project]
name = "yuanfang-brain"
version = "0.1.0"
description = "Local-first voice + smart home fusion server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "webrtc-noise-gain>=1.2.0",
    "pywhispercpp>=0.1.0",
    "anthropic>=0.38.0",
    "lancedb>=0.13.0",
    "orjson>=3.10.0",
    "openwakeword>=0.6.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
